Fix "more stories columns" block card spacing

--- a/resources/scss/modular/_block-more-stories-columns.scss
+++ b/resources/scss/modular/_block-more-stories-columns.scss
@@ -59,14 +59,9 @@
 				}
 
 
-			.block__column-stories {}
-
-				.block__column-stories .card {
-					margin-bottom: spacing(3);
-				}
-
-				.block__column-stories .card--resource {
-					max-width: 325px;
-				}
-
+			.block__column-stories {
+                display: flex;
+                flex-direction: column;
+                gap: spacing(3);
+            }
 }
